--- a/app/public/style.css
+++ b/app/public/style.css
@@ -71,14 +71,13 @@ img
 
 #menu li
 {
-  display: block;  
+  display: block;
   float:left; 
 
   list-style-type: none;
 
   width: 140px;
-  height: 42px;
-  margin: 0 10px;
+  margin: 0 10px 10px 10px;
 
   padding: 0.2em 0;
   text-align: center;
@@ -87,8 +86,8 @@ img
 
 #menu .selected
 {
-  background-image: url("/images/button.png");
-  background-repeat: no-repeat;
+  background-color: #285fa3;
+  border-radius: 5px;
   color: #fff;
 }
 
@@ -112,35 +111,22 @@ img
   text-decoration: none;
 }
 
-#titleback
-{
-  width: 100%;
-  background-image: url("/images/titlebg.gif");
-  background-position: center;
-  background-repeat: repeat-y;
-}
-
-#titleblock
-{
-  width: 940px;
-  margin: 0 auto;
-}
-
 #title
 {
+  width: 940px;
   position: relative;
-  width: 700px;
-  display: inline-block;
   z-index: 0;
 
   background-color: #285fa3;
-  background-image: url("/images/blcorner.png");
-  background-position: bottom left;
-  background-repeat: no-repeat;
 
   color: #fff;
   font-size: 30px;
   padding: 5px 0;
+
+  border-radius: 5px 0 0 5px;
+
+  padding-right: 10000px;
+  margin: 0 -10000px 38px 0;
 }
 
 #metatitle
@@ -165,7 +151,7 @@ img
 #mainBlock
 {
   width: 940px;
-  margin: 38px auto 0;
+  margin: 0 auto;
 }
 
 #mainBlock #content
@@ -174,18 +160,12 @@ img
   float: left;
 }
 
-.headingshifter
+.heading
 {
-  position: relative;
-  right: 100%;
-
+  margin-left: -10000px;
+  padding-left: 10000px;
   background-color: #285fa3;
-}
-
-.headingunshifter
-{
-  position: relative;
-  left: 100%;
+  border-radius: 0 5px 5px 0;
 }
 
 #mainBlock #content h3
@@ -211,7 +191,6 @@ img
   line-height: 30px;
   color: #fff;
   font-size: 20pt;
-  background-color: #285fa3;
   margin-bottom: 18px;
 }
 
@@ -270,54 +249,8 @@ img
 .anchorblock
 {
   position: relative;
-}
-
-.tlcorner
-{
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: 10px;
-  height: 10px;
-
-  background-image: url("/images/tlcorner.png");
-}
-
-.trcorner
-{
-  position: absolute;
-  top: 0;
-  right: 0;
-
-  width: 10px;
-  height: 10px;
-
-  background-image: url("/images/trcorner.png");
-}
-
-.blcorner
-{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
-  width: 10px;
-  height: 10px;
-
-  background-image: url("/images/blcorner.png");
-}
-
-.brcorner
-{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-
-  width: 10px;
-  height: 10px;
-
-  background-image: url("/images/brcorner.png");
+  border-radius: 5px;
+  background-color: #285fa3;
 }
 
 .right
