--- a/app/public/style.css
+++ b/app/public/style.css
@@ -114,6 +114,7 @@ img
 #title
 {
   width: 940px;
+  text-align: left;
   position: relative;
   z-index: 0;
 
@@ -129,11 +130,16 @@ img
   margin: 0 -10000px 38px 0;
 }
 
+#title h1
+{
+  width: 700px;
+}
+
 #metatitle
 {
   float: right;
   width: 230px;
-  margin-top: 10px;
+  margin-top: 6px;
   text-align: right;
   font-size: 14pt;
   color: #688fbe;
