Don't show an ultra-wide site if things go off the screen

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -10,11 +10,11 @@
   padding: 0;
 }
 
-html
+body
 {
   font-family: "Trebuchet MS";
-  overflow: -moz-scrollbars-vertical;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 a
