Update URLs to new domain

--- a/app/views/template.haml
+++ b/app/views/template.haml
@@ -33,7 +33,7 @@
         Logged in.
     #headerback
       #header
-        %a{:href=>"/"}
+        %a{:href=>"https://tim.fyi"}
           %img{:alt=>"tim perry (etc.)", :src=>"/images/logo.png"}
 
     %ul#menu
